--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </div>
     <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
-        <h3>fresher</h3>
-        <p>MERN-STACK Development I am a fresher in the development field seeking for experience to enhance my current position. I know HTML, CSS, and JavaScript,ReactJs,NodeJs and I want to develop myself to be more skilled in these fields.</p>
+<!--         <h3>fresher</h3> -->
+        <p> I am a fresher in the development field seeking for experience to enhance my current position. I know HTML, CSS, and JavaScript,ReactJs,NodeJs and I want to develop myself to be more skilled in these fields.</p>
         <p>If you need a hard-working and eligible MERN-STACK developer, I am ready to work and ready to maximize my potential in projects that will also enable me to learn more.</p>
 
         <button class="btn" id="read-more-btn">Read More</button>
@@ -172,8 +172,8 @@
             <div class="Project-box">
                 <img src="images/TaskBuddy.png" height="400" width="600" alt="">
                 <div class="Project-layer">
-                    <h4>TaskBuddy</h4>
-                    <p>TaskBuddy, a MERN-STACK application, is essential for efficient task management, providing users with features to create, edit, and delete tasks seamlessl.<h3>(Upgrading my project with secure user authentication features like login, logout, and signup will not only boost TaskBuddy's functionality but also greatly enhance its security. This ensures that user data remains protected, allowing users to manage their tasks with confidence in a secure environment.)</h3></p>
+                    <h4>TaskBuddi</h4>
+                    <p>TaskBuddi, a MERN-STACK application, is essential for efficient task management, providing users with features to create, edit, and delete tasks seamlessl.<h3>(Upgrading my project with secure user authentication features like login, logout, and signup will not only boost TaskBuddy's functionality but also greatly enhance its security. This ensures that user data remains protected, allowing users to manage their tasks with confidence in a secure environment.)</h3></p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
