--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="home-content">
             <h3>Hello,It's Me</h3>
             <h1>Mahesh Babu</h1>
-            <h3>And I'm a <span>MERN STACK Developer</span></h3>
+            <h3>And I'm a <span>Web Developer</span></h3>
             <p>I am a B. Tech student . I like web development also continue doing data structures and algorithms problems.</p>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/maheshbabugarnepudi"><i class='bx bxl-linkedin'></i></a>
@@ -66,8 +66,8 @@
     <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
 <!--         <h3>fresher</h3> -->
-        <p> I am a fresher in the development field seeking for experience to enhance my current position. I know HTML, CSS, and JavaScript,ReactJs,NodeJs and I want to develop myself to be more skilled in these fields.</p>
-        <p>If you need a hard-working and eligible MERN-STACK developer, I am ready to work and ready to maximize my potential in projects that will also enable me to learn more.</p>
+        <p> I am a fresher in the Web development field seeking for experience to enhance my current position. I know HTML, CSS, and JavaScript,ReactJs,NodeJs and I want to develop myself to be more skilled in these fields.</p>
+        <p>If you need a hard-working and eligible Web developer, I am ready to work and ready to maximize my potential in projects that will also enable me to learn more.</p>
 
         <button class="btn" id="read-more-btn">Read More</button>
 
