--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://leetcode.com/u/mahesh10221/"><i class='fas fa-code'></i></a>
             </div>
             <!-- Add this code within your header section, before or after other navigation links -->
-            <a href="Add your Resume" target="_blank" download class="btn">Download Resume</a>
+            <a href="./Resume/Resume.pdf" target="_blank" download class="btn">Download Resume</a>
 
             <!-- <a href="#" class="btn">Download CV</a> -->
         </div>
