--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="Project-layer">
                     <h4>MENU-LIST</h4>
                     <p>Crafted a MENU-LIST using HTML and CSS, faithfully recreating the platform's look and feel.</p>
-                    <a href="https://maha10221.github.io/Menu.web/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://maha10221.github.io/Menu-List/" target="_blank" rel="noopener noreferrer">
                         <i class='bx bx-link-external'></i>
                     </a>
                 </div>
