--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <p>Developed a React application highlighted by a user-friendly Navigation, descriptive Cards, and
                         a heartfelt Footer. The app's captivating images and thoughtful design invite users to relive their
                         journeys with ease and grace.</p>
-                    <a href="https://maha10221.github.io/Travel_React/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://maha10221.github.io/React-Travel-Journal/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             
