--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <a href="https://www.hackerrank.com/profile/maheshbabugarne1"><i class='fab fa-hackerrank'></i></a>
                 <a href="https://www.codechef.com/users/mahesh10221"><i class='fas fa-utensils'></i></a>
                 <a href="https://leetcode.com/u/mahesh10221/"><i class='fas fa-code'></i></a>
+                <a href="https://www.geeksforgeeks.org/user/mahesh10221/"><i class='fas fa-book'></i></a>
             </div>
             <!-- Add this code within your header section, before or after other navigation links -->
             <a href="./Resume/MaheshBabu_Resume.pdf" target="_blank" download class="btn">Download Resume</a>
