--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
                 <a href="https://github.com/Maha10221"><i class='bx bxl-github'></i></a>
                 <a href="mailto:maheshbabugarnepudi21@gmail.com"><i class='bx bxl-gmail'></i></a>
                 <a href="https://www.hackerrank.com/profile/maheshbabugarne1"><i class='fab fa-hackerrank'></i></a>
-                <a href="https://www.codechef.com/users/mahesh10221"><i class='fas fa-utensils'></i></a>
-                <a href="https://leetcode.com/u/mahesh10221/"><i class='fas fa-code'></i></a>
-                <a href="https://www.geeksforgeeks.org/user/mahesh10221/"><i class='fas fa-book'></i></a>
+                <a href="https://www.codechef.com/users/mahesh10221" target="_blank">
+                <img src="https://s3.amazonaws.com/codechef_shared/sites/all/themes/abessive/cc-logo.svg" alt="CodeChef" style="width:24px;height:24px;"></a>
+                <a href="https://leetcode.com/u/mahesh10221/" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" alt="LeetCode" style="width:24px;height:24px;"></a>
+                <a href="https://auth.geeksforgeeks.org/user/mahesh10221/" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/GeeksforGeeks.svg" alt="GeeksforGeeks" style="width:24px;height:24px;"></a>
+
             </div>
             <!-- Add this code within your header section, before or after other navigation links -->
             <a href="./Resume/MaheshBabu_Resume.pdf" target="_blank" download class="btn">Download Resume</a>
