--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
             <h3>And I'm a <span>Web Developer</span></h3>
             <p>I am a B. Tech student . I like web development also continue doing data structures and algorithms problems.</p>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/maheshbabugarnepudi"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/Maha10221"><i class='bx bxl-github'></i></a>
-                <a href="mailto:maheshbabugarnepudi21@gmail.com"><i class='bx bxl-gmail'></i></a>
-                <a href="https://www.hackerrank.com/profile/maheshbabugarne1"><i class='fab fa-hackerrank'></i></a>
+               <a href="https://www.linkedin.com/in/maheshbabugarnepudi" target="_blank">
+               <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" style="width:24px;height:24px;"></a>
+               <a href="https://github.com/Maha10221" target="_blank">
+               <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" style="width:24px;height:24px;"></a>
+               <a href="mailto:maheshbabugarnepudi21@gmail.com" target="_blank">
+               <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.svg" alt="Gmail" style="width:24px;height:24px;"></a>
+               <a href="https://www.hackerrank.com/profile/maheshbabugarne1" target="_blank">
+               <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Hackerrank_logo.png" alt="HackerRank" style="width:24px;height:24px;"></a>
+
                 <a href="https://www.codechef.com/users/mahesh10221" target="_blank">
                 <img src="https://s3.amazonaws.com/codechef_shared/sites/all/themes/abessive/cc-logo.svg" alt="CodeChef" style="width:24px;height:24px;"></a>
                 <a href="https://leetcode.com/u/mahesh10221/" target="_blank">
